--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -30,7 +30,7 @@
             </p>
             <p class="card-footer-item">
               <span>
-                <a href="checklist-form.html">Editar</a>
+                <a href="/checklists/<%= element.id %>/edit">Editar</a>
               </span>
             </p>
             <p class="card-footer-item">
