--- a/src/views/checklists/new.ejs
+++ b/src/views/checklists/new.ejs
@@ -1,4 +1,4 @@
-<%- include('../layouts/header', {title: 'Lista de Tarefas'}) %> 
+<%- include('../layouts/header', {title: 'Nova Lista de Tarefas'}) %> 
 <%- include('../layouts/menu') %>
 
 <section class="section">
