--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -35,7 +35,7 @@
             </p>
             <p class="card-footer-item">
               <span>
-                <a href="#" class="has-text-danger">Remover</a>
+                <a href="checklists/<%=element.id %>?_method=delete" class="has-text-danger">Remover</a>
               </span>
             </p>
           </footer>
