Cadastro de uma nova tarefa

--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -20,7 +20,7 @@
         <div class="card has-background-white-ter">
           <div class="card-content">
             <p class="subtitle is-size-5"><%= element.name %></p>
-            <p class="subtitle is-size-6"><%= element.tasks.count %> Tarefas</p>
+            <p class="subtitle is-size-6"><%= element.tasks.length %> Tarefa(s)</p>
           </div>
           <footer class="card-footer">
             <p class="card-footer-item">
