--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -8,7 +8,7 @@
             <h1 class="title size-4"><%= checklist.name %></h1>
           </div>
           <div class="column is-one-fifth">
-            <a href="add-task.html" class="button is-success is-small"
+            <a href="/checklists/<%= checklist._id %>/tasks/new" class="button is-success is-small"
               >Nova Tarefa</a
             >
             <a href="/checklists" class="button is-small">Voltar</a>
@@ -20,7 +20,7 @@
         <% checklist.tasks.forEach(element => { %>
             <div class="columns">
             <div class="column is-four-fifths">
-                <input type="checkbox" /> element.nome
+                <input type="checkbox" /> <%= element.name %>
             </div>
 
             <div class="column is-one-fifth">
