Aula - Fazendo request JSON

--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -19,8 +19,11 @@
 
         <% checklist.tasks.forEach(element => { %>
             <div class="columns">
-            <div class="column is-four-fifths">
-                <input type="checkbox" /> <%= element.name %>
+            <div class="column is-four-fifths <%= element.done ? 'has-text-success is-italic' : '' %> ">
+                <input type="checkbox" 
+                onchange="setTagAsDone(this, '<%= element._id%>')"
+                <%= element.done ? 'checked' : '' %>
+                /> <%= element.name %>
             </div>
 
             <div class="column is-one-fifth">
